add rate limiting code

--- a/website/login.html
+++ b/website/login.html
@@ -7,7 +7,7 @@
             <div class="col-md-10 col-lg-8 col-xl-7">
                 <div class="page-heading">
                     <h1>Login</h1>
-                    <form style="background-color: white; text-align: left; padding: 5px; border-radius: 5px;" method="post">
+                    <form id="form" style="background-color: white; text-align: left; padding: 5px; border-radius: 5px;" method="post" action="/login">
                         <div class="mb-3">
                             <label for="exampleInputEmail1" class="form-label">Email address</label>
                             <input type="email" name="email" class="form-control" id="exampleInputEmail1"
@@ -19,14 +19,14 @@
                             <input type="password" name="password" class="form-control" id="exampleInputPassword1">
                         </div>
                         <div class="mb-3 form-check">
-                            <input type="checkbox" name="checkEmail" class="form-check-input" id="emailCheck">
+                            <input type="checkbox" name="checkEmail" class="form-check-input" id="emailCheck" onchange="emailChange()">
                             <label class="form-check-label" for="emailCheck">Check email security</label>
                         </div>
                         <div class="mb-3 form-check">
                             <input type="checkbox" name="checkPassword" class="form-check-input" id="passwordCheck">
                             <label class="form-check-label" for="passwordCheck">Check password security</label>
                         </div>
-                        <button type="submit" class="btn btn-primary" style="text-align: center;" formaction="/login">Submit</button>
+                        <button id="submit-btn" type="submit" class="btn btn-primary" style="text-align: center;">Submit</button>
                     </form>
                 </div>
             </div>
