--- a/website/summary.html
+++ b/website/summary.html
@@ -13,5 +13,26 @@
         </div>
     </div>
 </header>
+
+<!-- Content -->
+
+<div class="container px-4 px-lg-5">
+    <div class="row gx-4 gx-lg-5 justify-content-center">
+        <div class="col-md-10 col-lg-8 col-xl-7" id="breaches">
+            <h1 id="Test"></h1>
+            {{ if ne (.email | len) 0 }}
+            <h2>Breach Info:</h2>
+            {{ range .email }}
+            <!-- Post preview-->
+            <div class="breach">{{ . }}</div>
+            <!-- Divider-->
+            <hr class="my-4" />
+            {{ end }}
+            {{ end }}
+
+            <h3>Your password was breached: <b>{{.password}}</b> times.</h3>
+        </div>
+    </div>
+</div>
 {{template "footer" .}}
 {{ end }}
